# ray-tracing-rs

./: .gitconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
.devcontainer/: devcontainer.json
.github/workflows/: quickstart.yml  rust.yml
books/: RayTracingInOneWeekend.html.md  RayTracingTheNextWeek.html.md  RayTracingTheRestOfYourLife.html.md
pdfs/: RayTracingInOneWeekend.html  RayTracingTheRestOfYourLife.html
src/: camera.rs  color64.rs  data.rs  dielectric.rs  hittable.rs  hittable_vec.rs  hittables.rs  lambertian.rs  main.rs  material.rs  materials.rs  metal.rs  moving_sphere.rs  point64.rs  ray.rs  sphere.rs  textures.rs  util.rs  vec3.rs  vec3_64.rs
src/data/: color64.rs  point64.rs  ray.rs  vec3_64.rs  vector3.rs
src/hittables/: axis_aligned_bounding_box.rs  axis_aligned_rect.rs  bounded_volume_hierarchy.rs  bounding_box_comparators.rs  bvh_comparators.rs  constant_medium.rs  cuboid.rs  hittable_vec.rs  mod.rs  moving_sphere.rs  quad.rs  rotation.rs  sphere.rs  translation.rs  triangle.rs  xy_rect.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/textures/: checker.rs  image.rs  noise.rs  perlin.rs  solid_color.rs
src/util/: args.rs  colors.rs  interactive.rs  obj.rs  ppm.rs  render.rs  world.rs  worlds.rs
