[package]
name = "ray-tracer"
version = "1.7.3"
authors = ["Peter Aarestad <aarestad@gmail.com>"]
edition = "2021"
description = "Trace some rays"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
image = "0.25.1"
threadpool = "1.8.1"
num_cpus = "1.16.0"
args = "2.2.0"
getopts = "0.2.21"
array-init = "2.1.0"
nalgebra = "0.33.0"
parry3d = "0.17.0"
approx = "0.5.1"

[[bin]]
name = "ppm_test"
path = "src/util/ppm.rs"

[[bin]]
name = "ray-tracer"
path = "src/main.rs"