[package]
name = "ray-tracer"
version = "1.7.3"
authors = ["Peter Aarestad <aarestad@gmail.com>"]
edition = "2024"
description = "Trace some rays"
default-run = "ray-tracer"

[dependencies]
anyhow = "1.0"
rand = "0.9.0"
rand_distr = "0.5.1"
image = "0.25.5"
threadpool = "1.8.1"
num_cpus = "1.16.0"
args = "2.2.0"
getopts = "0.2.21"
array-init = "2.1.0"
nalgebra = "0.34.1"
approx = "0.5.1"
tobj = "4.0"
minifb = "0.27"
#parry3d = "0.18.0"

[profile.release]
lto = "thin"
codegen-units = 1
debug = true

[[bin]]
name = "ppm_test"
path = "src/util/ppm.rs"

[[bin]]
name = "ray-tracer"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.8.2"
flamegraph = "0.6.11"
